adjust header styles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
-<app-header></app-header>
-<app-search></app-search>
-<app-albums></app-albums>
+<div class="container">
+  <header>
+    <app-header></app-header>
+  </header>
+  <main>
+    <app-albums></app-albums>
+  </main>
+</div>
