add album list with dummy data

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 @import 'styles/variables';
+@import 'styles/media-queries';
 @import 'styles/globals/colors';
 @import 'styles/globals/main-layout';
 @import 'styles/globals/normalize';
