--- a/src/styles/media-queries.scss
+++ b/src/styles/media-queries.scss
@@ -1,19 +1,13 @@
-$screen-xs: (min-width: 320px);
-$screen-s: (min-width: 375px);
-$screen-m: (min-width: 768px);
-$screen-l: (min-width: 1024px);
-$screen-xl: (min-width: 1448px);
-
 $screen-gte-xs: (min-width: 320px);
 $screen-gte-s: (min-width: 375);
 $screen-gte-m: (min-width: 768px);
-$screen-gte-l: (width: 1024px);
-$screen-gte-xl: (width: 1448px);
-$screen-gte-vga: (width: 640px);
-$screen-gte-hd: (width: 1280px);
-$screen-gte-uxga: (width: 1600px);
-$screen-gte-full-hd: (width: 1920px);
-$screen-gte-full-hd-and-gap: (width: 1952px);
+$screen-gte-l: (min-width: 1024px);
+$screen-gte-xl: (min-width: 1448px);
+$screen-gte-vga: (min-width: 640px);
+$screen-gte-hd: (min-width: 1280px);
+$screen-gte-uxga: (min-width: 1600px);
+$screen-gte-full-hd: (min-width: 1920px);
+$screen-gte-full-hd-and-gap: (min-width: 1952px);
 
 // $screen-gt-xs: (width > 320px);
 // $screen-gt-s: (width > 375px);
