adjust filters to list only albums from specific artist from search results

--- a/src/app/modules/albums/album-list/album/album.component.html
+++ b/src/app/modules/albums/album-list/album/album.component.html
@@ -7,3 +7,5 @@
   </div>
   <a [routerLink]="['album/' + album.artistId + '/' + album.id]" (click)="onClick()"></a>
 </div>
+
+<app-album-detail></app-album-detail>
