--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,7 @@
 @import 'styles/globals/main-layout';
 @import 'styles/globals/normalize';
 @import 'styles/globals/elements/native';
+@import 'styles/globals/elements/form-elements';
 @import 'styles/typography';
 
 @import 'styles/layout';
