--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 @import 'styles/variables';
 @import 'styles/media-queries';
+@import 'styles/properties/shadows';
 @import 'styles/globals/colors';
 @import 'styles/globals/main-layout';
 @import 'styles/globals/normalize';
