--- a/src/app/modules/albums/album-list/album-list.component.html
+++ b/src/app/modules/albums/album-list/album-list.component.html
@@ -1,6 +1,6 @@
 <app-filters></app-filters>
 <div class="album-list">
   <div *ngFor="let album of albums; let i = index">
-    <app-album [album]="album" [index]="i"></app-album>
+    <app-album [album]="album"></app-album>
   </div>
 </div>
