adjust album details on click and some decoration

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,3 +6,12 @@
     <app-albums></app-albums>
   </main>
 </div>
+
+<ng-template #loader [ngIf]="loading">
+  <div class="loader-overlay" aria-hidden="false">
+    <svg aria-hidden="true" focusable="false" role="presentation" class="spinner" viewBox="0 0 66 66"
+      xmlns="http://www.w3.org/2000/svg">
+      <circle class="path" fill="none" stroke-width="6" cx="33" cy="33" r="30"></circle>
+    </svg>
+  </div>
+</ng-template>
