--- a/src/app/modules/albums/album-list/album/album.component.html
+++ b/src/app/modules/albums/album-list/album/album.component.html
@@ -2,7 +2,7 @@
   <figure>
     <img [src]="album.cover" [alt]="album.name" width="600" height="600">
   </figure>
-  <a [routerLink]="['album/' + album.artistId + '/' + album.id]" (click)="onClick()"></a>
+  <a (click)="onClick()"></a>
   <div>
     <h4 class="artist">{{album.artistName}}</h4>
     <h3 class="name">{{album.name}}</h3>
