--- a/src/app/modules/header/header.component.html
+++ b/src/app/modules/header/header.component.html
@@ -1,4 +1,4 @@
 <div class="header">
-  <h1 class="logo">iTunes Search App</h1>
+  <h1 class="logo">iTunes Album Lister</h1>
   <app-search></app-search>
 </div>
