--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,15 @@
 @import 'styles/variables';
 @import 'styles/media-queries';
+
 @import 'styles/properties/shadows';
+@import 'styles/properties/transitions';
+
 @import 'styles/globals/colors';
 @import 'styles/globals/main-layout';
 @import 'styles/globals/normalize';
+
 @import 'styles/globals/elements/native';
 @import 'styles/globals/elements/form-elements';
-@import 'styles/typography';
 
-@import 'styles/layout';
+@import 'styles/properties/typography';
+@import 'styles/properties/layout';
