--- a/src/styles/globals/main-layout.scss
+++ b/src/styles/globals/main-layout.scss
@@ -1,11 +1,17 @@
 .container {
+  --container-template-areas: ". head ." ". main .";
+  --container-row-gap: var(--gap);
+
+  .home & {
+    --container-template-areas: ". head .";
+    --container-row-gap: 0;
+  }
+
   display: grid;
   font-family: var(--font-family);
   font-weight: var(--font-weight-normal);
-  row-gap: var(--gap);
-  grid-template-areas: 
-        ". head ."
-        ". main .";
+  row-gap: var(--container-row-gap);
+  grid-template-areas: var(--container-template-areas);
   grid-template-columns: var(--main-inline-offset) auto var(--main-inline-offset);
   grid-template-rows: min-content auto min-content;
   line-height: var(--line-height-base);
