--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -40,7 +40,7 @@ $color-beige: #D9B176;
 $color-blue: #333BF7;
 $color-blue-dark: #200B69;
 $color-brown: #925E39;
-$color-red: #E20119;
+$color-red: #C7372F;
 $color-orange: #FF7F00;
 $color-primary-transparent: rgba($color-primary, .5);
 $color-primary-light-transparent: rgba($color-primary-light, .5);
