keep album detail open when page refresh

--- a/www/src/app/modules/albums/album-list/album-list.component.html
+++ b/www/src/app/modules/albums/album-list/album-list.component.html
@@ -1,5 +1,5 @@
 <div class="album-list">
   <div *ngFor="let album of albums; let i = index">
-    <app-album [album]="album"></app-album>
+    <app-album [album]="album" [albumId]="+albumId"></app-album>
   </div>
 </div>
