--- a/www/src/app/modules/albums/album-list/album/album-detail/album-detail.component.scss
+++ b/www/src/app/modules/albums/album-list/album/album-detail/album-detail.component.scss
@@ -97,6 +97,7 @@ dialog {
         font-size: var(--font-size-xxl);
         font-weight: var(--font-weight-extra-bold);
         margin: 0;
+        max-width: 35vw;
       }
 
       .artist {
